@@ -29,7 +29,6 @@ import static com.oracle.svm.core.util.VMError.guarantee;
 import java.lang.reflect.Executable;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Deque;
 import java.util.HashMap;
@@ -134,7 +133,6 @@ import com.oracle.svm.hosted.meta.HostedUniverse;
 import com.oracle.svm.hosted.phases.StrengthenStampsPhase;
 import com.oracle.svm.hosted.phases.SubstrateClassInitializationPlugin;
 import com.oracle.svm.hosted.phases.SubstrateGraphBuilderPhase;
-import com.oracle.truffle.api.CompilerDirectives.TruffleBoundary;
 
 import jdk.vm.ci.meta.DeoptimizationAction;
 import jdk.vm.ci.meta.DeoptimizationReason;
@@ -143,6 +141,7 @@ import jdk.vm.ci.meta.JavaType;
 import jdk.vm.ci.meta.ResolvedJavaField;
 import jdk.vm.ci.meta.ResolvedJavaMethod;
 import jdk.vm.ci.meta.ResolvedJavaType;
+import jdk.vm.ci.services.Services;
 
 /**
  * The main handler for running Graal in the Substrate VM at run time. This feature (and features it
@@ -156,9 +155,6 @@ public final class GraalFeature implements Feature {
     public static class Options {
         @Option(help = "Print call tree of methods available for runtime compilation")//
         public static final HostedOptionKey<Boolean> PrintRuntimeCompileMethods = new HostedOptionKey<>(false);
-
-        @Option(help = "Print truffle boundaries found during the analysis")//
-        public static final HostedOptionKey<Boolean> PrintStaticTruffleBoundaries = new HostedOptionKey<>(false);
 
         @Option(help = "Maximum number of methods allowed for runtime compilation.")//
         public static final HostedOptionKey<LocatableMultiOptionValue.Strings> MaxRuntimeCompileMethods = new HostedOptionKey<>(new LocatableMultiOptionValue.Strings());
@@ -313,35 +309,30 @@ public final class GraalFeature implements Feature {
 
     @Override
     public List<Class<? extends Feature>> getRequiredFeatures() {
-        return Arrays.asList(DeoptimizationFeature.class, FieldsOffsetsFeature.class);
+        if (Services.IS_BUILDING_NATIVE_IMAGE) {
+            return List.of(FieldsOffsetsFeature.class);
+        }
+        return List.of(DeoptimizationFeature.class, FieldsOffsetsFeature.class);
     }
 
     @Override
     public void duringSetup(DuringSetupAccess c) {
-        DuringSetupAccessImpl config = (DuringSetupAccessImpl) c;
-        AnalysisMetaAccess aMetaAccess = config.getMetaAccess();
-
-        try {
-            /*
-             * Check early that the classpath is set up correctly. The base class of SubstrateType
-             * is the NodeClass from Truffle. So we require Truffle on the class path for any images
-             * and tests that use Graal at run time.
-             */
-            aMetaAccess.lookupJavaType(SubstrateType.class);
-        } catch (NoClassDefFoundError ex) {
-            throw VMError.shouldNotReachHere("Building a native image with Graal support requires Truffle on the class path. For unit tests run with 'svmtest', add the option '--truffle'.");
-        }
-
         ImageSingletons.add(GraalSupport.class, new GraalSupport());
-
         if (!ImageSingletons.contains(RuntimeGraalSetup.class)) {
             ImageSingletons.add(RuntimeGraalSetup.class, new SubstrateRuntimeGraalSetup());
         }
+
+        DuringSetupAccessImpl config = (DuringSetupAccessImpl) c;
+        AnalysisMetaAccess aMetaAccess = config.getMetaAccess();
         GraalProviderObjectReplacements providerReplacements = ImageSingletons.lookup(RuntimeGraalSetup.class).getProviderObjectReplacements(aMetaAccess);
         objectReplacer = new GraalObjectReplacer(config.getUniverse(), aMetaAccess, providerReplacements);
         config.registerObjectReplacer(objectReplacer);
 
         config.registerClassReachabilityListener(GraalSupport::registerPhaseStatistics);
+    }
+
+    public Map<AnalysisMethod, CallTreeNode> getRuntimeCompiledMethods() {
+        return methods;
     }
 
     @Override
@@ -471,7 +462,7 @@ public final class GraalFeature implements Feature {
 
         if (!methods.containsKey(aMethod)) {
             methods.put(aMethod, new CallTreeNode(aMethod, aMethod, null, 0, ""));
-            config.registerAsInvoked(aMethod, true);
+            config.registerAsRoot(aMethod, true);
         }
 
         return sMethod;
@@ -536,7 +527,11 @@ public final class GraalFeature implements Feature {
                 parse = true;
                 graph = new StructuredGraph.Builder(debug.getOptions(), debug, AllowAssumptions.YES)
                                 .method(method)
-                                .recordInlinedMethods(false)
+                                /*
+                                 * Needed for computation of the list of all runtime compilable
+                                 * methods in TruffleFeature.
+                                 */
+                                .recordInlinedMethods(true)
                                 .build();
             }
 
@@ -658,10 +653,6 @@ public final class GraalFeature implements Feature {
             printCallTree();
         }
 
-        if (Options.PrintStaticTruffleBoundaries.getValue()) {
-            printStaticTruffleBoundaries();
-        }
-
         int maxMethods = 0;
         for (String value : Options.MaxRuntimeCompileMethods.getValue().values()) {
             String numberStr = null;
@@ -677,9 +668,6 @@ public final class GraalFeature implements Feature {
             printDeepestLevelPath();
             throw VMError.shouldNotReachHere("Number of methods for runtime compilation exceeds the allowed limit: " + methods.size() + " > " + maxMethods);
         }
-
-        HostedMetaAccess hMetaAccess = config.getMetaAccess();
-        runtimeConfigBuilder.updateLazyState(hMetaAccess);
 
         /*
          * Start fresh with a new GraphEncoder, since we are going to optimize all graphs now that
@@ -834,30 +822,6 @@ public final class GraalFeature implements Feature {
         }
     }
 
-    private void printStaticTruffleBoundaries() {
-        HashSet<ResolvedJavaMethod> foundBoundaries = new HashSet<>();
-        int callSiteCount = 0;
-        int calleeCount = 0;
-        for (CallTreeNode node : methods.values()) {
-            StructuredGraph graph = node.graph;
-            for (MethodCallTargetNode callTarget : graph.getNodes(MethodCallTargetNode.TYPE)) {
-                ResolvedJavaMethod targetMethod = callTarget.targetMethod();
-                TruffleBoundary truffleBoundary = targetMethod.getAnnotation(TruffleBoundary.class);
-                if (truffleBoundary != null) {
-                    ++callSiteCount;
-                    if (foundBoundaries.contains(targetMethod)) {
-                        // nothing to do
-                    } else {
-                        foundBoundaries.add(targetMethod);
-                        System.out.println("Truffle boundary found: " + targetMethod);
-                        calleeCount++;
-                    }
-                }
-            }
-        }
-        System.out.println(String.format("Number of Truffle call boundaries: %d, number of unique called methods outside the boundary: %d", callSiteCount, calleeCount));
-    }
-
     private void printCallTree() {
         System.out.println("depth;method;Graal nodes;invoked from source;full method name;full name of invoked virtual method");
         for (CallTreeNode node : methods.values()) {
@@ -991,5 +955,10 @@ class GraphPrepareMetaAccessExtensionProvider implements MetaAccessExtensionProv
     @Override
     public boolean isGuaranteedSafepoint(ResolvedJavaMethod method, boolean isDirect) {
         throw VMError.shouldNotReachHere();
+    }
+
+    @Override
+    public boolean canVirtualize(ResolvedJavaType instanceType) {
+        return true;
     }
 }
